--- a/styles.css
+++ b/styles.css
@@ -38,5 +38,28 @@ body {
 
 .scoreboard {
     background: white;
-    width: 20%;
+    width: 15%;
+    text-align: center;
+    border-radius: 10px;
+}
+
+.current-score {
+    font-size: 3vw;
+}
+
+.score-marker {
+    font-size: 1.1vw;
+}
+
+.score-text {
+    margin-top: 20px;
+}
+
+.component-body {
+    background-image: url('images/bg-triangle.svg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: 50% 62%;
+    height: 300px;
+    padding: 200px;
 }
