--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,22 @@
     font-family: 'Barlow Semi Condensed', sans-serif;
 }
 
+.hidden-body {
+    filter: brightness(50%);
+}
+
 html, body {
     height: 100%;
 }
 
 body {
     background: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
+}
+
+.container {
     position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 .header {
@@ -51,11 +60,13 @@ body {
     margin-top: 20px;
 }
 
+
 .board {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    z-index: 1;
 }
 
 .component {
@@ -96,6 +107,41 @@ body {
     padding: 10px 25px;
     font-size: 1vw;
     border-radius: 8px;
+}
+
+.rules-popup {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9;
+}
+
+.text-div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.rule-header {
+    position: relative;
+    top: 60px;
+    font-size: 2vw;
+    left: 40px;
+}
+
+.cross {
+    position: relative;
+    top: 80px;
+    right: 40px;
+    height: 20px;
+}
+
+.rule-img {
+    background: white;
+    height: 300px;
+    width: 300px;
+    padding: 80px;
+    border-radius: 10px;
 }
 
 
