--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,14 @@ body {
     height: 100%;
 }
 
+.game {
+    z-index: 1;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+
 .header {
     width: 55%;
     border: 1px solid hsl(217, 16%, 45%);
@@ -69,6 +77,7 @@ body {
     z-index: 1;
 }
 
+
 .component {
     border: 1px solid white;
     border-radius: 50%;
@@ -112,9 +121,9 @@ body {
 .rules-popup {
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 40%;
     transform: translate(-50%, -50%);
-    z-index: 9;
+    z-index: 2;
 }
 
 .text-div {
