--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,6 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1;
 }
 
 
@@ -143,6 +142,10 @@ body {
     top: 80px;
     right: 40px;
     height: 20px;
+}
+
+.cross:hover {
+    opacity: 0.5;
 }
 
 .rule-img {
