--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,10 @@ body {
     background: white;
 }
 
+.component:hover {
+    opacity: 0.5;
+}
+ 
 .rock {
     position: absolute;
     left: -15px;
