--- a/game.css
+++ b/game.css
@@ -4,10 +4,14 @@
     font-family: 'Barlow Semi Condensed', sans-serif;
 }
 
+.p-image {
+    margin-right: 160px;
+}
+
 .player-choice {
     border: 1px solid white;
     border-radius: 50%;
-    border-width: 100px;
+    border-width: 70px;
     background: white;
 }
 
@@ -31,7 +35,7 @@
 
 .choice-text {
     padding-bottom: 80px;
-    font-size: 1.5vw;
+    font-size: 2rem;
     color: white;
 }
 
