--- a/game.css
+++ b/game.css
@@ -4,10 +4,6 @@
     font-family: 'Barlow Semi Condensed', sans-serif;
 }
 
-.p-image {
-    margin-right: 160px;
-}
-
 .player-choice {
     border: 1px solid white;
     border-radius: 50%;
@@ -18,7 +14,7 @@
 .computer-choice {
     border: 1px solid #423F3E;
     border-radius: 50%;
-    border-width: 100px;
+    border-width: 70px;
     background: #423F3E;
 }
 
@@ -26,11 +22,12 @@
     text-align: center;
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 40%;
     transform: translate(-50%, -50%);
     display: flex;
     justify-content: space-between;
-    width: 500px;
+    width: 700px;
+    padding: 20px;
 }
 
 .choice-text {
@@ -39,3 +36,44 @@
     color: white;
 }
 
+.rock-choice {
+    border-radius: 50%;
+    position: absolute;
+    outline: 20px solid lightblue;
+    left: 0;
+}
+
+.paper-choice {
+    border-radius: 50%;
+    position: absolute;
+    outline: 20px solid orange;
+    left: 0;
+}
+
+.scissors-choice {
+    border-radius: 50%;
+    position: absolute;
+    outline: 20px solid red;
+    left: 0;
+}
+
+.rock-comp {
+    border-radius: 50%;
+    position: absolute;
+    outline: 20px solid lightblue;
+    right: 45px;
+}
+
+.paper-comp {
+    border-radius: 50%;
+    position: absolute;
+    outline: 20px solid orange;
+    right: 45px;
+}
+
+.scissors-comp {
+    border-radius: 50%;
+    position: absolute;
+    outline: 20px solid red;
+    right: 45px;
+}
