--- a/game.css
+++ b/game.css
@@ -28,6 +28,17 @@
     justify-content: space-between;
     width: 700px;
     padding: 20px;
+    margin-top: 90px;
+}
+
+.my-choice {
+    position: absolute;
+    left: -10px;
+}
+
+.opponent {
+    position: absolute;
+    right: -20px;
 }
 
 .choice-text {
@@ -40,22 +51,24 @@
     border-radius: 50%;
     position: absolute;
     outline: 20px solid lightblue;
-    left: 0;
+    left: -10px;
 }
 
 .paper-choice {
     border-radius: 50%;
     position: absolute;
     outline: 20px solid orange;
-    left: 0;
+    left: -10px;
 }
 
 .scissors-choice {
     border-radius: 50%;
     position: absolute;
     outline: 20px solid red;
-    left: 0;
+    left: -10px;
 }
+
+
 
 /* Repetition of classes is for correct positioning */
 
@@ -63,19 +76,53 @@
     border-radius: 50%;
     position: absolute;
     outline: 20px solid lightblue;
-    right: 45px;
+    right: 25px;
 }
 
 .paper-comp {
     border-radius: 50%;
     position: absolute;
     outline: 20px solid orange;
-    right: 45px;
+    right: 25px;
 }
 
 .scissors-comp {
     border-radius: 50%;
     position: absolute;
     outline: 20px solid red;
-    right: 45px;
+    right: 25px;
+}
+
+.play-again {
+    text-align: center;
+    margin: 0 auto;
+    height: 100px;
+    padding-bottom: 200px;
+}
+
+.winText {
+    position: absolute;
+    bottom: 0;
+    left: 35%;
+    right: 40%;
+    transform: (-50%, -50%);
+    width: 200px;
+}
+
+.whiteText {
+    color: white;
+    font-size: 3rem;
+    padding-bottom: 20px;
+}
+
+.reset-button {
+    position: relative;
+    background: white;
+    color: hsl(229, 64%, 46%);
+    width: 250px;
+    height: 50px;
+    right: 23px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 1.2rem;
 }
